tests/it/snapshots/it__snapshot_screens__emergency.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 604
description: Settings → select Emergency Wipe
expression: output
---
                                  [1/3]  ● ○ ○
                               Emergency Data Wipe

┌ [!] Emergency Data Wipe ─────────────────────────────────────────────────────┐
│                                                                              │
│  [-] All contacts will be deleted                                            │
│      Your contact cards and exchange history will be permanently removed.    │
│                                                                              │
│  [K] All keys will be destroyed                                              │
│      Encryption keys will be securely shredded and cannot be recovered.      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] I Understand  [Esc] Cancel  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
