tests/it/snapshots/it__snapshot_screens__group_detail.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 657
description: Groups → press Enter on group
expression: output
---
                                     Family

┌ [#] Group Info ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [-] Members                                                                 │
│      3                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts (3) ────────────────────────────────────────────────────────────────┐
│▸ AS Abigale Schroeder                                                        │
│  AN Ahmed Nikolaus                                                           │
│  AD Andreanne Doyle                                                          │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Preview as Abigale Schroeder  [Enter] Preview as Ahmed Nikolaus
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
