tests/it/snapshots/it__snapshot_screens__group_detail_empty.snap
---
source: tests/it/snapshot_screens.rs
description: Groups → press Enter on empty group
expression: output
---
                                   Empty Group

 ○ Sync  [Enter]
┌ [#] Group Info ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  [#] Members                                                                 │
│      0                                                                       │
│                                                                              │
│  [o] Visible Fields                                                          │
│      0                                                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Field Visibility ────────────────────────────────────────────────────────────┐
│ [ ] Work                                                                     │
│     alice@company.com                                                        │
│ [ ] Mobile                                                                   │
│     +41 79 123 45 67                                                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet. Use Exchange to add one.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[Enter] Rename  [Enter] Delete Group  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
