tests/it/snapshots/it__snapshot_screens__groups.snap
---
source: tests/it/snapshot_screens.rs
description: MyInfo → press Enter (Group View)
expression: output
---
                                     Groups

 ○ Sync  [Enter]
┌ View Mode ───────────────────────────────────────────────────────────────────┐
│ [x] Members                                                                  │
│     Which contacts are in each group                                         │
│ [ ] Visibility                                                               │
│     Which of your fields each group sees                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   [#] Family  3 members                                                      │
│   [#] Friends  4 members                                                     │
│   [#] Work  3 members                                                        │
└──────────────────────────────────────────────────────────────────────────────┘








[n] New Group  [?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │  4 ★ Groups   │    5 More
