tests/it/snapshots/it__snapshot_screens__help.snap
---
source: tests/it/snapshot_screens.rs
description: "MyInfo → press '5' (More tab) → Help"
expression: output
---
                                   Help & FAQ

 ○ Sync  [Enter]
Search
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Search help topics…                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • How do I add a contact?                                                  │
│   • How do I create a backup?                                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • What is end-to-end encryption?                                           │
│   • How does social recovery work?                                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • How is my IP address protected?                                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • Report a Bug                                                             │
│   • Suggest an Idea                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
