tests/it/snapshots/it__snapshot_screens__lock_screen.snap
---
source: tests/it/snapshot_screens.rs
description: app_start → app password configured
expression: output
---
                                 Enter Password

Password
┌ ✎ editing ───────────────────────────────────────────────────────────────────┐
│█                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
