tests/it/snapshots/it__snapshot_screens__my_info_entry_detail.snap
---
source: tests/it/snapshot_screens.rs
description: MyInfo → press Enter on entry
expression: output
---
                                   Alice Smith

  [Avatar: AS]
┌ [-] Ready to exchange? ──────────────────────────────────────────────────────┐
│                                                                              │
│  [#] Find someone nearby                                                     │
│      Share your contact card in person — private and secure.                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘









[Enter] Exchange Now  [a] Add Entry  [Enter] Group View  [Enter] Preview as...
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
