tests/it/snapshots/it__snapshot_screens__privacy.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 248
description: Settings → select Privacy & Data
expression: output
---
                                 Privacy & Data

 ○ Sync  [Enter]
┌ [-] Data Status ─────────────────────────────────────────────────────────────┐
│                                                                              │
│  Deletion Status                                                             │
│  No deletion requested                                                       │
│                                                                              │
│  Consent                                                                     │
│  Active                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   • View My Data  See what data is stored locally                            │
│   • Manage Consent  Review and update data consent                           │
└──────────────────────────────────────────────────────────────────────────────┘







[e] Export My Data  [x] Delete Identity  [!] Panic Shred  [?] help  [Esc] back
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
