tests/it/snapshots/it__snapshot_screens__recovery.snap
---
source: tests/it/snapshot_screens.rs
description: Settings → select Recovery
expression: output
---
                                 Social Recovery

 ○ Sync  [Enter]
┌ [R] Lost Your Device? ───────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Recovery Settings ───────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ [!] Not enough trusted contacts — Mark 3 more contact(s) as trusted for recov│
└──────────────────────────────────────────────────────────────────────────────┘
┌ How it works ────────────────────────────────────────────────────────────────┐
│                                                                              │
│  1. Create New Identity                                                      │
│  First, create a new identity on your new device.                            │
│                                                                              │
│  2. Generate Recovery Claim                                                  │
│  Create a claim using your OLD public key from your lost identity.           │
│                                                                              │
│  3. Collect Vouchers                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
