tests/it/snapshots/it__snapshot_screens__settings.snap
---
source: tests/it/snapshot_screens.rs
description: "MyInfo → press '5' (More tab) → Settings"
expression: output
---
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
┌ Notifications ───────────────────────────────────────────────────────────────┐
┌ Appearance ──────────────────────────────────────────────────────────────────┐
  Theme: — ▼
  Language: — ▼
┌ Accessibility ───────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Backup & Recovery ───────────────────────────────────────────────────────────┐
┌ Network ─────────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Message Delivery ────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ Help & Support ──────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
┌ About ───────────────────────────────────────────────────────────────────────┐
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘
[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
